# IM-object-detection

./: .gitignore  environment.yml  predict.py  pyproject.toml  requirements.txt  script.sh  train.py  verify_data.py
VOCdevkit/VOC2012/: Annotations  ImageSets  JPEGImages
models/: faster_rcnn.py  modules.py
notebooks/: debug.ipynb  training_colab.ipynb  trainning.ipynb
saved_results/: evaluation.json  predictions.json
src/: constants.py  dataset.py  inference.py  model.py  train.py  transforms.py
utils/: analyze_predictions.py  dataset.py  helper.py  metric.py  summarize_augmentation_ablation.py  tune_thresholds.py
